<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    app:cardElevation="10dp"
    app:contentPadding="10dp"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="2"
            android:gravity="">

            <TextView
                android:id="@+id/type_txt"
                android:text="@string/type"
                android:textSize="10sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/name_txt"
                android:text="@string/name"
                android:layout_marginTop="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/delete_item_img_view"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="5dp"
            android:src="@drawable/baseline_delete_24"
            android:visibility="gone"
            android:contentDescription="@string/delete_button_des"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>